Fix width issue with long shift time and position title. Closes #912.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -403,11 +403,6 @@ legend{
   width: 200px;
 }
 
-.fix-schedule-time-bar {
-  margin: 0px;
-  margin-bottom: 2px;
-                        }
-
 .star {
   color:#FED845;
 }
