--- a/app/assets/stylesheets/shifts.css.scss
+++ b/app/assets/stylesheets/shifts.css.scss
@@ -69,3 +69,13 @@ cursor: pointer;
   right: 90px;
   bottom: 18px;
 }
+
+.fix-schedule-time-bar {
+  margin: 0px;
+  margin-bottom: 2px;
+                        }
+
+.shift {
+  height: 40px;
+  vertical-align: middle;
+}
